--- a/templates/ACH-add.html
+++ b/templates/ACH-add.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
     <form action="" method="POST" enctype="multipart/form-data">
         {% for field in form if field.widget.input_type != 'hidden' %}
             {{ form.hidden_tag() }}
-            {{ field.label }} {{field(accept='.csv')}}
+            {{ field.label }} {{field(class='form-control', accept='.csv')}}
         {% endfor %}
         <button>Upload</button>
     </form>
