Finished search page. Next up restrictions for routes.

--- a/templates/ACH-navbar.html
+++ b/templates/ACH-navbar.html
@@ -23,7 +23,7 @@
                         or user.department.name =='Fiscal'
                         or user.department.name == 'Cage' %}
                         <li class="nav-item">
-                        <a aria-current="true" class="nav-link {% if index == 2 %} active {% endif %}" href="#">Search Credits</a>
+                        <a aria-current="true" class="nav-link {% if index == 2 %} active {% endif %}" href="/fiscal/ACH/recon">Search Credits</a>
                         </li>
                     {% endif %}
                     
